Set up header internal layout and fix sidebar alignment

--- a/styles.css
+++ b/styles.css
@@ -9,15 +9,45 @@
 
 .container {
   display: grid;
-  grid-template: auto auto / auto 1fr;
+  grid-template: auto 1fr / auto 1fr;
 }
 
 .header {
   background-color: white;
-  grid-column: 1 / -1;
+  padding: var(--gap-small);
+
+  display: grid;
+  grid-template: auto auto / 1fr auto;
+  align-items: center;
+}
+
+.header-icons,
+.header-buttons {
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  gap: var(--gap-small);
+}
+
+.greeting {
+  font-size: 0.8rem;
+
+  display: grid;
+  grid-template: auto auto / auto 1fr;
+  gap: var(--gap-small);
+}
+
+.greeting > img {
+  grid-row: 1 / -1;
+}
+
+.username {
+  font-size: 1.2rem;
 }
 
 .sidebar {
+  grid-row: 1 / -1;
+
   background-color: var(--color-dark);
   color: white;
   padding: var(--gap-small) var(--gap-large) var(--gap-small) var(--gap-small);
@@ -51,3 +81,14 @@ li > a {
 .main-content {
   background-color: var(--color-light);
 }
+
+button {
+  appearance: none;
+}
+
+/* 
+TO DO LIST:
+Style search button - FONT AWESOME https://www.w3schools.com/howto/howto_css_search_button.asp
+Style input bar
+Style other buttons
+Check why header-icons have a top gap */
